--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>etch-a-sketch</title>
     <link rel="stylesheet" href="style.css">
-    <script src='jquery-3.5.1.js'></script>
+    <script src="jquery-3.5.1.min.js"></script>
 </head>
 <body>
     <button onclick='start()'><span style='margin-left: -20px;'>populate</span></button>
