--- a/index.html
+++ b/index.html
@@ -3,8 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <title>etch-a-sketch</title>
-    <link rel="stylesheet" href="style.css">
-    <script src="jquery-3.5.1.min.js"></script>
 </head>
 <body>
     <button onclick='start()'><span style='margin-left: -20px;'>populate</span></button>
@@ -43,7 +41,7 @@
     function hovering(p) {
         p.style.backgroundColor = 'red';
     }
-    $(document).ready(function(){
+    document.ready(function(){
         const space = document.getElementById('space');
         space.hover(function(){
             space.css('backgroundColor','red');
