--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     function hovering(p) {
         p.style.backgroundColor = 'red';
     }
-    document.ready(function(){
+    document.onReady(function(){
         const space = document.getElementById('space');
         space.hover(function(){
             space.css('backgroundColor','red');
